# CraftCAD

./: .editorconfig  .gitattributes  .gitignore  GoogleService-Info.plist  Podfile  README.md  agents.md  create_project_structure.sh  extract_codes.py  final_cleanup.py  find_missing_codes.py  justfile  move_topscreen_files.py  organize_craftcad.sh
apps/desktop/: CMakeLists.txt  README.md
apps/desktop/i18n/resources/: en.json  ja.json
apps/desktop/src/: camera.cpp  camera.h  canvas_widget.cpp  canvas_widget.h  doc_store.cpp  doc_store.h  face_part_panel.cpp  face_part_panel.h  hittest.cpp  hittest.h  main.cpp  overlay_renderer.cpp  overlay_renderer.h  selection_state.cpp  selection_state.h  snap_engine.cpp  snap_engine.h  view3d_widget.cpp  view3d_widget.h
apps/desktop/src/app/: mod.rs
apps/desktop/src/ffi/: craftcad_ffi.cpp  craftcad_ffi.h
apps/desktop/src/input/: numeric_input.cpp  numeric_input.h  shortcut_map.cpp  shortcut_map.h
apps/desktop/src/resources/: resource_locator.cpp  resource_locator.h
apps/desktop/src/tools/: ambiguity_controller.cpp  ambiguity_controller.h  arc_tool.cpp  arc_tool.h  chamfer_tool.cpp  chamfer_tool.h  circle_tool.cpp  circle_tool.h  fillet_tool.cpp  fillet_tool.h  line_tool.cpp  line_tool.h  mirror_tool.cpp  mirror_tool.h  move_tool.cpp  move_tool.h  offset_tool.cpp  offset_tool.h  pattern_tool.cpp  pattern_tool.h  polyline_tool.cpp  polyline_tool.h  rect_tool.cpp  rect_tool.h  rotate_tool.cpp  rotate_tool.h  scale_tool.cpp  scale_tool.h  tool_base.cpp  tool_base.h  trim_tool.cpp  trim_tool.h
apps/desktop/ui/: app_state.rs  main.rs  menu.rs  settings.rs
apps/desktop/ui/a11y/: accessibility.rs  focus_manager.rs  (+4 more)
core/: Cargo.toml
core/bom/: Cargo.toml
core/bom/src/: lib.rs
core/bom/tests/: bom_contract_lint.rs
core/commands/: Cargo.toml
core/commands/src/: command.rs  delta.rs  history.rs  lib.rs
core/commands/tests/: advanced_edit_roundtrip.rs  create_part_roundtrip.rs  create_shapes_roundtrip.rs  e2e_pipeline.rs  history_roundtrip.rs  nesting_roundtrip.rs  offset_trim_roundtrip.rs  transform_roundtrip.rs
core/crates/cache/: Cargo.toml
core/crates/constraints/: Cargo.toml
core/crates/craftcad_artifact_store/: Cargo.toml
core/crates/craftcad_determinism_harness/: Cargo.toml
core/crates/craftcad_dirty_deps/: Cargo.toml
core/crates/craftcad_dirty_engine/: Cargo.toml
core/crates/craftcad_estimate_lite/: Cargo.toml
core/crates/craftcad_mfg_hints_lite/: Cargo.toml
core/crates/craftcad_params_registry/: Cargo.toml
core/crates/craftcad_projection_lite/: Cargo.toml
core/crates/craftcad_regen_scheduler/: Cargo.toml
core/crates/craftcad_rules_engine/: Cargo.toml
core/crates/craftcad_screw_lite/: Cargo.toml
core/crates/craftcad_ssot/: Cargo.toml
core/crates/craftcad_viewpack/: Cargo.toml
core/crates/craftcad_viewpack_inspect/: Cargo.toml
core/crates/diagnostics/: Cargo.toml
core/crates/diycad_common/: Cargo.toml
core/crates/diycad_document/: Cargo.toml
core/crates/diycad_ffi/: Cargo.toml  cbindgen.toml
core/crates/diycad_format/: Cargo.toml
core/crates/diycad_geom/: Cargo.toml
core/crates/diycad_nesting/: Cargo.toml
core/crates/diycad_project/: Cargo.toml
core/crates/drawing_model/: Cargo.toml
core/crates/drawing_style/: Cargo.toml
core/crates/editor/: Cargo.toml
core/crates/errors/: Cargo.toml
core/crates/export_drawing/: Cargo.toml
core/crates/geom2d/: Cargo.toml
core/crates/io/: Cargo.toml
core/crates/io_bridge/: Cargo.toml
core/crates/io_dxf/: Cargo.toml
core/crates/io_json/: Cargo.toml
core/crates/io_support/: Cargo.toml
core/crates/io_svg/: Cargo.toml
core/crates/jobs/: Cargo.toml
core/crates/migration/: Cargo.toml
core/crates/perf/: Cargo.toml
core/crates/presets/: Cargo.toml
core/crates/recovery/: Cargo.toml
core/crates/render_ir/: Cargo.toml
core/crates/security/: Cargo.toml
core/crates/sketch/: Cargo.toml
core/crates/snapping/: Cargo.toml
core/crates/ssot_lint/: Cargo.toml
core/crates/wizards/: Cargo.toml
core/diag/: Cargo.toml
core/diag/src/: lib.rs
core/edit_ops/: Cargo.toml
core/edit_ops/src/: lib.rs
core/errors/: reason_codes.json
core/examples/: e2e_pipeline.rs
core/export/: Cargo.toml
core/export/schemas/: export_options.schema.json
core/export/src/: lib.rs  pdf_drawing.rs  pdf_tiled.rs  svg.rs
core/export/tests/: export_contract_lint.rs  export_invariants.rs  pdf_invariants.rs
core/faces/: Cargo.toml
core/faces/src/: extract.rs  lib.rs  winding.rs
core/ffi_desktop/: Cargo.toml
core/ffi_desktop/include/: craftcad_desktop_ffi.h
core/ffi_desktop/src/: editor_bridge.rs  lib.rs  perf_bridge.rs
core/ffi_desktop/tests/: ffi_contract_lint.rs  ffi_json_roundtrip.rs
core/i18n/: Cargo.toml
core/i18n/locales/: en-US.json  ja-JP.json
core/i18n/src/: format.rs  lib.rs  loader.rs
core/part_ops/: Cargo.toml
core/part_ops/src/: lib.rs
core/serialize/: Cargo.toml
core/serialize/examples/: make_sample.rs
core/serialize/schemas/: document.schema.json  manifest.schema.json
core/serialize/src/: lib.rs
core/serialize/tests/: diycad_document_migration.rs  reason_codes_lint.rs  schema_lint.rs  schema_validation.rs  spec_ssot_lint.rs
core/src/testing/: compat_harness.rs  dataset_runner.rs  datasets_manifest.rs  determinism_harness.rs  golden_harness.rs  mod.rs
core/tests/: compat_io_read.rs  compat_presets_read.rs  compat_projects_read.rs  compat_templates_read.rs  determinism_io.rs  determinism_migrate.rs  determinism_wizard.rs  golden_datasets.rs  golden_harness_smoke.rs  golden_harness_svg_normalize.rs  ssot_datasets_manifest_lint.rs
tools/diycad-cli/: Cargo.toml
tools/diycad-cli/src/: main.rs
tools/migrate/: Cargo.toml
tools/migrate/src/: args.rs  main.rs  report_json.rs
tools/migrate/tests/: cli_smoke.rs
ucel/: Cargo.toml
ucel/crates/ucel-cex-binance/: Cargo.toml
ucel/crates/ucel-cex-gmocoin/: Cargo.toml
ucel/crates/ucel-sdk/: Cargo.toml
ucel/crates/ucel-symbol-adapter/: Cargo.toml
ucel/crates/ucel-symbol-core/: Cargo.toml
ucel/crates/ucel-symbol-store/: Cargo.toml
(+878 files in other folders)
