[workspace]
members = [
  "crates/diycad_common",
  "crates/diycad_project",
  "crates/diycad_geom",
  "crates/diycad_nesting",
  "crates/diycad_ffi",
  "crates/errors",
  "crates/diycad_format",
  "crates/drawing_style",
  "crates/migration",
  "crates/io_support",
  "crates/io",
  "crates/io_dxf",
  "crates/io_svg",
  "crates/io_json",
  "crates/perf",
  "crates/security",
  "crates/diagnostics",
  "serialize",
  "commands",
  "edit_ops",
  "faces",
  "part_ops",
  "bom",
  "export",
  "ffi_desktop",
  "i18n",
  "diag",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["CraftCAD Contributors"]

[workspace.dependencies]
thiserror = "1"
