[workspace]
members = [
  "crates/geom2d",
  "crates/sketch",
  "crates/snapping",
  "crates/constraints",
  "crates/editor",
  "crates/diycad_common",
  "crates/diycad_project",
  "crates/diycad_geom",
  "crates/diycad_nesting",
  "crates/diycad_ffi",
  "crates/errors",
  "crates/diycad_format",
  "crates/drawing_style",
  "crates/export_drawing",
  "crates/migration",
  "crates/recovery",
  "crates/io_support",
  "crates/io",
  "crates/io_dxf",
  "crates/io_svg",
  "crates/io_json",
  "crates/io_bridge",
  "crates/perf",
  "crates/cache",
  "crates/render_ir",
  "crates/security",
  "crates/diagnostics",
  "crates/drawing_model",
  "crates/diycad_document",
  "crates/presets",
  "crates/wizards",
  "crates/library",
  "crates/jobs",
  "crates/ssot_lint",
  "crates/craftcad_ssot",
  "crates/craftcad_projection_lite",
  "crates/craftcad_estimate_lite",
  "crates/craftcad_screw_lite",
  "crates/craftcad_rules_engine",
  "crates/craftcad_mfg_hints_lite",
  "serialize",
  "commands",
  "edit_ops",
  "faces",
  "part_ops",
  "bom",
  "export",
  "ffi_desktop",
  "i18n",
  "diag",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["CraftCAD Contributors"]

[workspace.dependencies]
thiserror = "1"
