[package]
name = "craftcad_commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
craftcad_serialize = { path = "../serialize" }
craftcad_edit_ops = { path = "../edit_ops" }
diycad_geom = { path = "../crates/diycad_geom" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
