[package]
name = "craftcad_commands"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
craftcad_serialize = { path = "../serialize" }
craftcad_edit_ops = { path = "../edit_ops" }
diycad_geom = { path = "../crates/diycad_geom" }
craftcad_part_ops = { path = "../part_ops" }
craftcad_faces = { path = "../faces" }
diycad_nesting = { path = "../crates/diycad_nesting" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4","serde"] }

[dev-dependencies]
craftcad_export = { path = "../export" }
craftcad_bom = { path = "../bom" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
