[package]
name = "craftcad_export"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
craftcad_serialize = { path = "../serialize" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
uuid = { version = "1", features = ["v4","serde"] }
