[package]
name = "craftcad_faces"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
craftcad_serialize = { path = "../serialize" }
diycad_geom = { path = "../crates/diycad_geom" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
