[package]
name = "craftcad_ffi_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
craftcad_serialize = { path = "../serialize" }
craftcad_commands = { path = "../commands" }
craftcad_part_ops = { path = "../part_ops" }
craftcad_faces = { path = "../faces" }
craftcad_bom = { path = "../bom" }
craftcad_export = { path = "../export" }
diycad_geom = { path = "../crates/diycad_geom" }
diycad_nesting = { path = "../crates/diycad_nesting" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
base64 = "0.22"
zip = "0.6"
diycad_common = { path = "../crates/diycad_common" }
