[package]
name = "craftcad_ffi_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
diycad_project = { path = "../crates/diycad_project" }
craftcad_ssot = { path = "../crates/craftcad_ssot" }
craftcad_projection_lite = { path = "../crates/craftcad_projection_lite" }
craftcad_estimate_lite = { path = "../crates/craftcad_estimate_lite" }
craftcad_rules_engine = { path = "../crates/craftcad_rules_engine" }
craftcad_mfg_hints_lite = { path = "../crates/craftcad_mfg_hints_lite" }
craftcad_serialize = { path = "../serialize" }
craftcad_commands = { path = "../commands" }
craftcad_part_ops = { path = "../part_ops" }
craftcad_faces = { path = "../faces" }
craftcad_bom = { path = "../bom" }
craftcad_export = { path = "../export" }
diycad_geom = { path = "../crates/diycad_geom" }
diycad_nesting = { path = "../crates/diycad_nesting" }
craftcad_i18n = { path = "../i18n" }
craftcad_diag = { path = "../diag" }
craftcad_editor = { path = "../crates/editor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
base64 = "0.22"
zip = "0.6"
diycad_common = { path = "../crates/diycad_common" }
sha2 = "0.10"

[dev-dependencies]
sha2 = "0.10"
