[package]
name = "craftcad_serialize"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.17"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
craftcad_i18n = { path = "../i18n" }
sha2 = "0.10"
regex = "1"
jsonschema = "0.17"
serde_json = "1"
