[package]
name = "diycad-migrate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["CraftCAD Contributors"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
craftcad_diycad_format = { path = "../../core/crates/diycad_format" }
craftcad_migration = { path = "../../core/crates/migration" }
