[package]
name = "diycad-migrate"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"

diycad_format = { path = "../../core/crates/diycad_format" }
migration = { path = "../../core/crates/migration" }

[dev-dependencies]
tempfile = "3"
