[package]
name = "craftcad_determinism_harness"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "craftcad-determinism-check"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["serde"] }

craftcad_ssot = { path = "../craftcad_ssot" }
craftcad_projection_lite = { path = "../craftcad_projection_lite" }
craftcad_estimate_lite = { path = "../craftcad_estimate_lite" }
craftcad_mfg_hints_lite = { path = "../craftcad_mfg_hints_lite" }
diycad_project = { path = "../diycad_project" }
