[package]
name = "craftcad_rules_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }

craftcad_ssot = { path = "../craftcad_ssot" }
craftcad_screw_lite = { path = "../craftcad_screw_lite" }
