[package]
name = "craftcad_viewpack"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

craftcad_ssot = { path = "../craftcad_ssot" }
craftcad_estimate_lite = { path = "../craftcad_estimate_lite" }
craftcad_projection_lite = { path = "../craftcad_projection_lite" }
craftcad_mfg_hints_lite = { path = "../craftcad_mfg_hints_lite" }

[dev-dependencies]
uuid = { version = "1", features = ["serde"] }
