[package]
name = "craftcad_diagnostics"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
craftcad_perf = { path = "../perf" }
craftcad_ssot = { path = "../craftcad_ssot" }
craftcad_projection_lite = { path = "../craftcad_projection_lite" }
craftcad_estimate_lite = { path = "../craftcad_estimate_lite" }
craftcad_mfg_hints_lite = { path = "../craftcad_mfg_hints_lite" }
craftcad_viewpack = { path = "../craftcad_viewpack" }
craftcad_dirty_engine = { path = "../craftcad_dirty_engine" }
security = { path = "../security" }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
proptest = "1"
tempfile = "3"
craftcad_ssot = { path = "../craftcad_ssot" }
