[package]
name = "diycad_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
diycad_common = { path = "../diycad_common" }
diycad_project = { path = "../diycad_project" }

[dev-dependencies]
tempfile = "3"
