[package]
name = "diycad_format"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "parsing"] }
tempfile = "3"

[dev-dependencies]
rand = "0.8"
