[package]
name = "diycad_geom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
craftcad_serialize = { path = "../../serialize" }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "geom_bench"
harness = false
