[package]
name = "diycad_nesting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
diycad_geom = { path = "../diycad_geom" }
craftcad_serialize = { path = "../../serialize" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
