[package]
name = "diycad_project"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
craftcad_ssot = { path = "../craftcad_ssot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
