[package]
name = "craftcad_io"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
approx_curves = []
postprocess_machine = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
smallvec = "1"
ahash = "0.8"
craftcad_errors = { path = "../errors", package = "craftcad_errors" }
craftcad_io_support = { path = "../io_support", package = "craftcad_io_support" }
