[package]
name = "craftcad_io_svg"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
craftcad_io = { path = "../io" }
craftcad_io_support = { path = "../io_support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
quick-xml = "0.31"

[dev-dependencies]
pretty_assertions = "1.4"
