[package]
name = "craftcad_perf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["enabled"]
enabled = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
craftcad_errors = { path = "../errors" }
