[package]
name = "recovery"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }

diycad_format = { path = "../diycad_format" }

[dev-dependencies]
tempfile = "3"
