[package]
name = "ssot_lint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
serde_json = "1"
regex = "1"
craftcad_io = { path = "../io" }
craftcad_io_json = { path = "../io_json" }
craftcad_io_svg = { path = "../io_svg" }
craftcad_io_dxf = { path = "../io_dxf" }
craftcad_io_bridge = { path = "../io_bridge" }
craftcad_presets = { path = "../presets" }
craftcad_wizards = { path = "../wizards" }
tempfile = "3"

[dev-dependencies]
craftcad_diagnostics = { path = "../diagnostics" }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[[bin]]
name = "ssot-lint"
path = "src/main.rs"
