[package]
name = "craftcad_wizards"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
semver = "1"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
jsonschema = { version = "0.18", features = ["draft202012"] }
url = "2"
craftcad_presets = { path = "../presets" }
ordered-float = "4"

[dev-dependencies]
tempfile = "3"
