[package]
name = "craftcad_wizards"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
semver = "1"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
jsonschema = { version = "0.18", features = ["draft202012"] }
url = "2"
craftcad_presets = { path = "../presets" }
ordered-float = "4"

[dev-dependencies]
tempfile = "3"
recovery = { path = "../recovery" }
diycad_format = { path = "../diycad_format" }
zip = "2"
rand = "0.9"


[[test]]
name = "flow_shelf_to_nest_to_export"
path = "../../../tests/e2e/flow_shelf_to_nest_to_export.rs"

[[test]]
name = "wizard_determinism"
path = "../../../tests/determinism/wizard_determinism.rs"

[[test]]
name = "presets_templates_compat"
path = "../../../tests/compat/presets_templates_compat.rs"

[[test]]
name = "project_crash_recovery"
path = "../../../tests/e2e/project_crash_recovery.rs"

[[test]]
name = "diycad_open_save"
path = "../../../tests/golden/diycad_open_save/mod.rs"

[[test]]
name = "compat_open"
path = "../../../tests/compat/compat_open.rs"

[[test]]
name = "diycad_open_fuzz"
path = "../../../tests/fuzz/diycad_open_fuzz.rs"

[[test]]
name = "open_signature"
path = "../../../tests/determinism/open_signature.rs"

[[test]]
name = "migrate_verify_batch"
path = "../../../tests/e2e/migrate_verify_batch.rs"
